[package]
name = "cloudpiecer"
version = "1.0.0"
description = "A package that replaces shuffled function names in cloudflare main challenge script."
authors = ["YT-Gh0st"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
regex = "1.10.5"
